--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "declaration": true,
     "module": "commonjs",
     "skipLibCheck": true,
-    "lib": ["dom", "es2018"],
+    "lib": [
+      "dom",
+      "es2018"
+    ],
     "outDir": "lib",
     "strict": true,
     "allowSyntheticDefaultImports": true,
@@ -13,6 +16,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "exclude": ["node_modules"],
-  "include": ["src/**/*.ts"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src/**/*.ts"
+  ]
 }
