--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cahcommercial/create-project",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A npm init command for seeding a project",
   "bin": "init.js",
   "files": [
@@ -44,12 +44,6 @@
       "prettier/@typescript-eslint",
       "plugin:prettier/recommended"
     ],
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "ignorePatterns": [
-      "init.js"
-    ],
     "overrides": [
       {
         "files": [
@@ -90,18 +84,19 @@
     "minimist": "^1.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.4",
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
-    "@types/jest": "^24.0.25",
+    "@types/jest": "^24.9.0",
     "@types/minimist": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
+    "@types/node": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
     "concurrently": "^5.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "~6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   }
 }
