--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@cahcommercial/create-project",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A npm init command for seeding a project",
   "bin": "init.js",
   "files": [
     "lib",
-    "!**/*.spec.js"
+    "!**/*.spec.js",
+    "vscode",
+    "tsconfig.json"
   ],
   "repository": {
     "type": "git",
@@ -86,16 +88,16 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
-    "@types/jest": "^24.9.0",
+    "@types/jest": "^24.9.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^13.1.8",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
-    "concurrently": "^5.0.2",
+    "@types/node": "^13.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "~6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5"
   }
