--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cahcommercial/create-project",
-  "version": "1.6.0",
+  "version": "1.8.0",
   "description": "A npm init command for seeding a project",
   "bin": "init.js",
   "files": [
@@ -56,7 +56,10 @@
         }
       }
     ],
-    "rules": {}
+    "rules": {
+      "@typescript-eslint/explicit-function-return-type": 0,
+      "@typescript-eslint/no-use-before-define": 0
+    }
   },
   "commitlint": {
     "extends": [
@@ -90,14 +93,14 @@
     "@commitlint/config-angular": "^8.3.4",
     "@types/jest": "^25.2.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^13.11.0",
+    "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "~6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.2.7",
+    "jest": "^25.3.0",
     "prettier": "^2.0.4",
     "typescript": "^3.8.3"
   }
