--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "files.autoSave": "onFocusChange",
+  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "eslint.format.enable": true,
+  "editor.formatOnSave": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
