--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cahcommercial/create-project",
-  "version": "1.8.1",
+  "version": "1.9.0",
   "description": "A npm init command for seeding a project",
   "bin": "init.js",
   "files": [
@@ -19,7 +19,7 @@
   "keywords": [],
   "scripts": {
     "commitlint": "commitlint -f $(git rev-list --tags --max-count=1) -t $(git log --pretty=%H | head -1)",
-    "lint": "eslint \"src/**/*\" --fix",
+    "lint": "eslint \"src/**/*\" --fix --ext \"*.ts\"",
     "build": "rm -rf lib && npm run lint && tsc",
     "prepublishOnly": "npm run build && npm run commitlint",
     "watch:typescript": "tsc -w",
@@ -45,6 +45,9 @@
       "plugin:@typescript-eslint/recommended",
       "prettier/@typescript-eslint",
       "plugin:prettier/recommended"
+    ],
+    "ignorePatterns": [
+      "*.d.ts"
     ],
     "overrides": [
       {
@@ -93,15 +96,15 @@
     "@commitlint/config-angular": "^8.3.4",
     "@types/jest": "^25.2.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "concurrently": "^5.1.0",
+    "@types/node": "^13.13.4",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "~6.10.1",
+    "eslint-config-prettier": "~6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^25.3.0",
-    "prettier": "^2.0.4",
+    "jest": "^25.5.1",
+    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   }
 }
